--- a/home.html
+++ b/home.html
@@ -2,4 +2,17 @@
     <a href="/index.html">
     <div class="button"></div><span class="buttonText">Explore</span></div>
 </a>
-</div><div class="v107_72"><span class="why">Why Ai</span><span class="home">Home</span><span class="features">Features</span><span class="contact">Contact Me</span></div><div class="v111_2"></div><div class="logo"></div></div></body></html>
+</div><div class="v107_72">
+    <a href="/index.html">
+    <span class="why">Why Ai</span>
+</a>
+<a href="/index.html">
+    <span class="home">Home</span>
+</a>
+<a href="/index.html">
+    <span class="features">Features</span>
+</a>
+<a href="/index.html">
+    <span class="contact">Contact Me</span>
+</a>
+</div><div class="v111_2"></div><div class="logo"></div></div></body></html>
